--- a/package.json
+++ b/package.json
@@ -11,17 +11,29 @@
   "author": "Iyanuoluwa",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@joi/date": "^2.1.1",
+    "@sentry/node": "^8.38.0",
+    "@sentry/profiling-node": "^8.38.0",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status-codes": "^2.3.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "save": "^2.9.0",
+    "ts-node": "^10.9.2",
     "winston": "^3.17.0"
   }
 }
