--- a/package.json
+++ b/package.json
@@ -12,26 +12,36 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@bull-board/api": "^6.5.3",
+    "@bull-board/express": "^6.5.3",
     "@joi/date": "^2.1.1",
     "@sentry/node": "^8.38.0",
     "@sentry/profiling-node": "^8.38.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.4",
     "celebrate": "^15.0.3",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
+    "debug": "^4.3.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "morgan": "^1.10.0",
     "save": "^2.9.0",
     "ts-node": "^10.9.2",
     "winston": "^3.17.0"
